--- a/styles.css
+++ b/styles.css
@@ -48,11 +48,12 @@ header .profile {
 /*----------  MAIN SECTION  ----------*/
 
 main {
-    padding-top: 1rem;
+    padding-top: 14rem;
     width: 100%;
     display: flex;
     justify-content: center;
 }
+
 
 main .container-main .google-logo {
     text-align: center;
@@ -70,4 +71,36 @@ main .container-main .search-box {
     background-position: 20px center, 520px center;
     background-repeat: no-repeat, no-repeat;
     background-size: 18px, 15px;
+}
+
+main .container-main .buttons {
+    display: flex;
+    justify-content: center;
+}
+
+main .container-main .buttons .btn-main {
+    background-color: #f8f9fa;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-right: 15px;
+    font-size: 14px;
+    color: #202124;
+}
+
+main .container-main .message{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+main .container-main .message p a{
+    text-decoration: none;
+}
+
+main .container-main .offered {
+    text-align: center;
 }
