--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
-/*----------  HEADER  ----------*/
-
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    max-height: 100vh;
 }
+
+/*----------  HEADER  ----------*/
 
 body {
     background: #fff;
@@ -48,10 +47,11 @@ header .profile {
 /*----------  MAIN SECTION  ----------*/
 
 main {
-    padding-top: 14rem;
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    min-height: calc(100vh - 44.17px - 97px);
 }
 
 
@@ -97,10 +97,40 @@ main .container-main .message{
     padding: 20px 0;
 }
 
-main .container-main .message p a{
+main .container-main .message p a, main .container-main .offered a{
     text-decoration: none;
 }
 
 main .container-main .offered {
     text-align: center;
+}
+
+
+/*----------  FOOTER  ----------*/
+
+footer {
+    background: rgba(242,242,242);
+    color: rgba(0,0,0,.54);
+}
+
+footer .row1 {
+    line-height: 3rem;
+    border-bottom: 1px solid #dadce0;
+    padding-left: 20px;
+}
+
+footer .row2 {
+    line-height: 3rem;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+}
+
+footer .row2 .col1 ul, footer .row2 .col2 ul {
+    list-style: none;
+}
+
+footer .row2 .col1 ul li, footer .row2 .col2 ul li {
+    display: inline-block;
+    margin-right: 10px;
 }
