--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,18 @@
 
 body {
     background: #fff;
+    font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
     padding: 6px;
+    width: 100%;
+    height: 60px;
     display: flex;
 }
 
-header .container-header {
+header nav {
     width: 100%;
     line-height: 2rem;
     display: flex;
@@ -24,23 +27,35 @@ header .container-header {
     justify-content: flex-end;
 }
 
-header .container-header p {
+header nav ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+header nav ul li {
     display: inline-block;
-    padding-right: 20px;
-    font-size: 13px;
+    margin-right: 10px;
     cursor: pointer;
 }
 
 
-header .menu {
+header nav ul .menu-icon {
+    background: url('./assets/menu.png') no-repeat;
+    background-position: center;
+    background-size: contain;
     width: 16px;
-    margin-right: 20px;
+    height: 16px;
 }
 
-header .profile {
+header nav ul .profile-pic {
+    background: url('./assets/profile.jpg') no-repeat;
+    background-position: center;
+    background-size: contain;
     width: 32px;
+    height: 32px;
     border-radius: 50%;
-    margin-right: 20px;
+    margin-left: 10px;
 }
 
 
