--- a/styles.css
+++ b/styles.css
@@ -61,62 +61,90 @@ header nav ul .profile-pic {
 /*----------  MAIN SECTION  ----------*/
 
 main {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: calc(100vh - 44.17px - 97px);
-}
-
-
-main .container-main .google-logo {
+    margin-top: 150px;
     text-align: center;
 }
 
-main .container-main .search-box {
-    outline: none;
-    border: 1px solid #e2e2e2;
-    border-radius: 25px;
-    line-height: 2.6rem;
-    width: 560px;
-    margin: 20px 0;
-    padding-left: 50px;
-    background-image: url('./assets/loupe.png'), url('./assets/mic.png');
-    background-position: 20px center, 520px center;
-    background-repeat: no-repeat, no-repeat;
-    background-size: 18px, 15px;
+
+main .main-logo {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
 }
 
-main .container-main .buttons {
+main .main-logo img {
+    width: 300px;
+}
+
+main .main-input {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+main .main-input .main-input-container {
+    width: 525px;
+    border-radius: 100px;
+    border: 1px solid #dfe1e5;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
-main .container-main .buttons .btn-main {
-    background-color: #f8f9fa;
-    outline: none;
-    cursor: pointer;
-    padding: 10px 20px;
+main .main-input input {
+    width: 450px;
+    height: 40px;
     border: none;
-    border-radius: 5px;
-    margin-right: 15px;
+    outline: none;
+}
+
+main .main-input .main-input-container:hover {
+    box-shadow: 0 1px 6px 0 #20212447;
+    border-color: #dfe1e500;
+}
+
+main .main-input .search-icon {
+    background: url('./assets/loupe.png') no-repeat center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+}
+
+main .main-input .mic-icon {
+    background: url('./assets/mic.png') no-repeat center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+}
+
+main .main-buttons {
+    width: 530px;
+    margin: 0 auto;
+}
+
+main .main-buttons div {
+    display: inline-block;
+}
+
+main .main-buttons button {
+    height: 36px;
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
     font-size: 14px;
-    color: #202124;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin-right: 8px;
 }
 
-main .container-main .message{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px 0;
-}
-
-main .container-main .message p a, main .container-main .offered a{
-    text-decoration: none;
-}
-
-main .container-main .offered {
-    text-align: center;
+main .main-buttons button:hover {
+    border: 1px solid #c6c6c6;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
+    color: #222;
+    background-color: #f8f8f8;
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+    cursor: pointer;
 }
 
 
